# RayTracing

./: README.md  color.h  main.c  ray.c  scene.h  sphere.c  vector.c
code/: CMakeLists.txt  color.c  light_source.h  main.c  plane.c  plane.h  ray.c  ray.h  scene.c  sphere.h  vector.h
